--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -3,29 +3,31 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-@ONLINE{t00,
-  editor = {Bratková, Eva},
-  editortype={compiler},
-  title =  {Metody citování literatury a strukturování bibliografických záznamů podle mezinárodních norem ISO 690 a ISO 690-2}, 
-  subtitle = {metodický materiál pro autory vysokoškolských kvalifikačních prací}, edition = {Verze 2.0, aktualiz. a rozšíř.}, 
-  location = {Praha},
-  publisher = {Odborná komise pro otázky elektronického zpřístupňování vysokoškolských kvalifikačních prací, Asociace knihoven vysokých škol ČR},
-  date = {2008-12-22},
-  pagetotal = {60}, 
-  url = {http://www.evskp.cz/SD/4c.pdf},
-  urldate = {2011-02-02}
+@BOOK{linux,
+  author = {Marco Cesati, Daniel P. Bovet}, 
+  year={2005},
+  title = {Understanding the Linux Kernel}, 
+  subtitle = {Third Edition},
+  edition= {third},
+  publisher = {O'Reilly Media},
+  pagetotal =  {944},
+  isbn =  {978-0596005658}
 }
 
-@BOOK{t01,
-  author = {Borgman, Christine L.}, 
-  year={2003},
-  title = {From Gutenberg to the global information infrastructure}, 
-  subtitle = {access to information in the networked world},
+@BOOK{newlinux,
+  author = {Raghu Bharadwaj}, 
+  year={2017},
+  title = {Mastering Linux Kernel Development},
   edition= {first},
-  location = {Cambridge (Mass)}, 
-  publisher = {The MIT Press},
-  pagetotal =  {xviii, 324},
-  isbn =  {0-262-52345-0}
+  publisher = {Packt Publishing},
+  pagetotal =  {354},
+  isbn =  {978-1785883057}
+}
+
+@MANUAL{shmctl,
+  year={2017},
+  title = {SHMCTL(2) Linux Programmer's Manual},
+  edition= {4.15}
 }
 
 @INCOLLECTION{t02,
