--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -7,3 +7,5 @@
 \newacronym{posix}{POSIX}{Portable Operating System Interface}
 \newacronym{rcu}{RCU}{read-copy-update}
 \newacronym{pid}{PID}{process identifier}
+\newacronym{ram}{RAM}{random access memory}
+\newacronym{vfs}{VFS}{virtual file system}
