--- a/includes/attachmentB.tex
+++ b/includes/attachmentB.tex
@@ -153,4 +153,134 @@ struct shmid_kernel /* private to the kernel */
 	struct list_head	shm_clist;	/* list by creator */
 } __randomize_layout;
 \end{lstlisting}
+\begin{lstlisting}[
+  caption={Ukážka použitia soketu},
+  label={lst:server},
+  language=c
+]
+#include <stdio.h>
+#include <stdlib.h>
+#include <errno.h>
+#include <string.h>
+#include <sys/types.h>
+#include <sys/socket.h>
+#include <sys/un.h>
 
+#define SOCK_PATH "echo_socket"
+
+int main(void)
+{
+    int s, s2, t, len;
+    struct sockaddr_un local, remote;
+    char str[100];
+
+    if ((s = socket(AF_UNIX, SOCK_STREAM, 0)) == -1) {
+        perror("socket");
+        exit(1);
+    }
+
+    local.sun_family = AF_UNIX;
+    strcpy(local.sun_path, SOCK_PATH);
+    unlink(local.sun_path);
+    len = strlen(local.sun_path) + sizeof(local.sun_family);
+    if (bind(s, (struct sockaddr *)&local, len) == -1) {
+        perror("bind");
+        exit(1);
+    }
+
+    if (listen(s, 5) == -1) {
+        perror("listen");
+        exit(1);
+    }
+
+    for(;;) {
+        int done, n;
+        printf("Waiting for a connection...\n");
+        t = sizeof(remote);
+        if ((s2 = accept(s, (struct sockaddr *)&remote, &t)) == -1) {
+            perror("accept");
+            exit(1);
+        }
+
+        printf("Connected.\n");
+
+        done = 0;
+        do {
+            n = recv(s2, str, 100, 0);
+            if (n <= 0) {
+                if (n < 0) perror("recv");
+                done = 1;
+            }
+
+            if (!done) 
+                if (send(s2, str, n, 0) < 0) {
+                    perror("send");
+                    done = 1;
+                }
+        } while (!done);
+
+        close(s2);
+    }
+
+    return 0;
+}
+\end{lstlisting}
+\begin{lstlisting}[
+  caption={Ukážka použitia soketu na strane klienta},
+  label={lst:client},
+  language=c
+]
+#include <stdio.h>
+#include <stdlib.h>
+#include <errno.h>
+#include <string.h>
+#include <sys/types.h>
+#include <sys/socket.h>
+#include <sys/un.h>
+
+#define SOCK_PATH "echo_socket"
+
+int main(void)
+{
+    int s, t, len;
+    struct sockaddr_un remote;
+    char str[100];
+
+    if ((s = socket(AF_UNIX, SOCK_STREAM, 0)) == -1) {
+        perror("socket");
+        exit(1);
+    }
+
+    printf("Trying to connect...\n");
+
+    remote.sun_family = AF_UNIX;
+    strcpy(remote.sun_path, SOCK_PATH);
+    len = strlen(remote.sun_path) + sizeof(remote.sun_family);
+    if (connect(s, (struct sockaddr *)&remote, len) == -1) {
+        perror("connect");
+        exit(1);
+    }
+
+    printf("Connected.\n");
+
+    while(printf("> "), fgets(str, 100, stdin), !feof(stdin)) {
+        if (send(s, str, strlen(str), 0) == -1) {
+            perror("send");
+            exit(1);
+        }
+
+        if ((t=recv(s, str, 100, 0)) > 0) {
+            str[t] = '\0';
+            printf("echo> %s", str);
+        } else {
+            if (t < 0) perror("recv");
+            else printf("Server closed connection\n");
+            exit(1);
+        }
+    }
+
+    close(s);
+
+    return 0;
+}
+\end{lstlisting}
