--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -30,6 +30,20 @@
   edition= {4.15}
 }
 
+@MANUAL{socket,
+  year={2017},
+  title = {SOCKET(2) Linux Programmer's Manual},
+  edition= {4.15}
+}
+
+@ARTICLE{beej,
+  author = {Brian "Beej Jorgensen" Hall},
+  title = {Beej's Guide to Unix IPC},
+  edition= {1.1.3},
+  year = {2015},
+  url = {http://beej.us/guide/bgipc/html/multi/index.html},
+}
+
 @INCOLLECTION{t02,
   author = {Greenberg, David}, 
   year = {1998},
