--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -9,3 +9,4 @@
 \newacronym{pid}{PID}{process identifier}
 \newacronym{ram}{RAM}{random access memory}
 \newacronym{vfs}{VFS}{virtual file system}
+\newacronym{lsm}{LSM}{Linux security module}
