--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -2,11 +2,13 @@
 \newacronym{hw}{HW}{Halo Wars}
 \newacronym{cdma}{CDMA}{Code Division Multiple Access} 
 \newacronym{gsm}{GSM}{Global System for Mobile communication}
+
 \newacronym{ipc}{IPC}{Inter-Process Communication}
-\newacronym{fifo}{FIFO}{First in, First out}
+\newacronym{fifo}{FIFO}{First In, First Out}
 \newacronym{posix}{POSIX}{Portable Operating System Interface}
-\newacronym{rcu}{RCU}{read-copy-update}
-\newacronym{pid}{PID}{process identifier}
-\newacronym{ram}{RAM}{random access memory}
-\newacronym{vfs}{VFS}{virtual file system}
-\newacronym{lsm}{LSM}{Linux security module}
+\newacronym{rcu}{RCU}{Read-Copy-Update}
+\newacronym{pid}{PID}{Process Identifier}
+\newacronym{ram}{RAM}{Random Access Memory}
+\newacronym{vfs}{VFS}{Virtual File System}
+\newacronym{lsm}{LSM}{Linux Security Module}
+\newacronym{SELinux}{SELinux}{Security-Enhanced Linux - bezpečnostné riešenie, ktoré poskytuje bezpečnostnú politiku riadenia prístupu}
