--- a/includes/attachmentB.tex
+++ b/includes/attachmentB.tex
@@ -284,3 +284,30 @@ int main(void)
     return 0;
 }
 \end{lstlisting}
+
+\begin{lstlisting}[
+  caption={K-objekt procesu},
+  label={lst:kobjekt},
+  language=c
+]
+struct process_kobject { /* was: m_proc_inf */
+
+	pid_t pid, parent_pid, child_pid, sibling_pid;
+	struct pid* pgrp;
+	kuid_t uid, euid, suid, fsuid;
+	kgid_t gid, egid, sgid, fsgid;
+        char cmdline[128];
+
+	kuid_t luid;
+	kernel_cap_t ecap, icap, pcap;
+	MEDUSA_SUBJECT_VARS;
+	MEDUSA_OBJECT_VARS;
+	__u32 user;
+#ifdef CONFIG_MEDUSA_SYSCALL
+	/* FIXME: this is wrong on non-i386 architectures */
+
+		/* bitmap of syscalls, which are reported */
+	unsigned char med_syscall[NR_syscalls / (sizeof(unsigned char) * 8)];
+#endif
+};
+\end{lstlisting}
