--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -111,6 +111,48 @@
   url = {http://man7.org/linux/man-pages/man2/kill.2.html},
 }
 
+@MANUAL{msgop,
+  year={2017},
+  title = {MSGOP(2) Linux Programmer's Manual},
+  edition= {4.15},
+  url = {http://man7.org/linux/man-pages/man2/msgop.2.html},
+}
+
+@MANUAL{msgget,
+  year={2017},
+  title = {MSGGET(2) Linux Programmer's Manual},
+  edition= {4.15},
+  url = {http://man7.org/linux/man-pages/man2/msgget.2.html},
+}
+
+@MANUAL{msgctl,
+  year={2017},
+  title = {MSGCTL(2) Linux Programmer's Manual},
+  edition= {4.15},
+  url = {http://man7.org/linux/man-pages/man2/msgctl.2.html},
+}
+
+@MANUAL{semget,
+  year={2017},
+  title = {SEMGET(2) Linux Programmer's Manual},
+  edition= {4.15},
+  url = {http://man7.org/linux/man-pages/man2/semget.2.html},
+}
+
+@MANUAL{semop,
+  year={2017},
+  title = {SEMOP(2) Linux Programmer's Manual},
+  edition= {4.15},
+  url = {http://man7.org/linux/man-pages/man2/semop.2.html},
+}
+
+@MANUAL{semctl,
+  year={2017},
+  title = {SEMCTL(2) Linux Programmer's Manual},
+  edition= {4.15},
+  url = {http://man7.org/linux/man-pages/man2/semctl.2.html},
+}
+
 @MANUAL{socket,
   year={2017},
   title = {SOCKET(2) Linux Programmer's Manual},
