--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -6,4 +6,7 @@
 \newacronym{ram}{RAM}{Random Access Memory}
 \newacronym{vfs}{VFS}{Virtual File System}
 \newacronym{lsm}{LSM}{Linux Security Module}
+\newacronym{sem}{SEM}{Semaphore - semafór}
+\newacronym{shm}{SHM}{Shared Memory - zdieľaná pamäť}
+\newacronym{msg}{MSG}{Message queues - fronty správ}
 \newacronym{SELinux}{SELinux}{Security-Enhanced Linux - bezpečnostné riešenie, ktoré poskytuje bezpečnostnú politiku riadenia prístupu}
