--- a/includes/attachmentB.tex
+++ b/includes/attachmentB.tex
@@ -311,3 +311,66 @@ struct process_kobject { /* was: m_proc_inf */
 #endif
 };
 \end{lstlisting}
+
+\begin{lstlisting}[
+  caption={LSM hooky pre IPC},
+  label={lst:hook},
+  language=c
+]
+	//alokovanie
+	LSM_HOOK_INIT(msg_msg_alloc_security, medusa_l1_msg_msg_alloc_security),
+	LSM_HOOK_INIT(msg_msg_free_security, medusa_l1_msg_msg_free_security),
+	LSM_HOOK_INIT(msg_queue_alloc_security, medusa_l1_msg_queue_alloc_security),
+	LSM_HOOK_INIT(msg_queue_free_security, medusa_l1_msg_queue_free_security),
+	LSM_HOOK_INIT(shm_alloc_security, medusa_l1_shm_alloc_security),
+	LSM_HOOK_INIT(shm_free_security, medusa_l1_shm_free_security),
+	LSM_HOOK_INIT(sem_alloc_security, medusa_l1_sem_alloc_security),
+	LSM_HOOK_INIT(sem_free_security, medusa_l1_sem_free_security),
+
+	LSM_HOOK_INIT(ipc_permission, medusa_l1_ipc_permission),
+	LSM_HOOK_INIT(ipc_getsecid, medusa_l1_ipc_getsecid),	
+	LSM_HOOK_INIT(msg_queue_associate, medusa_l1_msg_queue_associate),
+	LSM_HOOK_INIT(msg_queue_msgctl, medusa_l1_msg_queue_msgctl),
+	LSM_HOOK_INIT(msg_queue_msgsnd, medusa_l1_msg_queue_msgsnd),
+	LSM_HOOK_INIT(msg_queue_msgrcv, medusa_l1_msg_queue_msgrcv),
+	LSM_HOOK_INIT(shm_associate, medusa_l1_shm_associate),
+	LSM_HOOK_INIT(shm_shmctl, medusa_l1_shm_shmctl),
+	LSM_HOOK_INIT(shm_shmat, medusa_l1_shm_shmat),
+	LSM_HOOK_INIT(sem_associate, medusa_l1_sem_associate),
+	LSM_HOOK_INIT(sem_semctl, medusa_l1_sem_semctl),
+	LSM_HOOK_INIT(sem_semop, medusa_l1_sem_semop),
+\end{lstlisting}
+\begin{lstlisting}[
+  caption={Alokovanie bezpečnostnej štruktúry},
+  label={lst:alloc},
+  language=c
+]
+int medusa_l1_ipc_alloc_security(struct kern_ipc_perm *ipcp, unsigned int ipc_class)
+{
+	struct medusa_l1_ipc_s *med;
+
+	med = (struct medusa_l1_ipc_s*) kmalloc(sizeof(struct medusa_l1_ipc_s), GFP_KERNEL);
+	if (med == NULL)
+		return -ENOMEM;
+
+	med->ipc_class = ipc_class;
+	ipcp->security = med;
+	return 0;
+}
+\end{lstlisting}
+\begin{lstlisting}[
+  caption={Uvoľnenie pamäte bezpečnostnej štruktúry},
+  label={lst:free},
+  language=c
+]
+void medusa_l1_ipc_free_security(struct kern_ipc_perm *ipcp)
+{
+	struct medusa_l1_ipc_s *med;
+	
+	if(ipcp->security != NULL) {
+		med = ipcp->security;
+		ipcp->security = NULL;
+		kfree(med);
+	}
+}
+\end{lstlisting}
